--- a/Analyze_ToothGrowth_data.Rmd
+++ b/Analyze_ToothGrowth_data.Rmd
@@ -3,6 +3,8 @@ title: "Analyze the ToothGrowth data in the R datasets package"
 author: "ِAbdallah Mohammed"
 date: "`r Sys.Date()`"
 output:
+  pdf_document:
+    latex_engine: xelatex
   html_document:
     df_print: paged
 ---
